force-app/main/default/objects/Product_Registry__mdt/Product_Registry__mdt.object-meta.xml
<CustomObject>
    <description>Defines a product tile or a tool in the EDA Cloud Settings page</description>
    <label>Product Registry</label>
    <pluralLabel>Product Registries</pluralLabel>
</CustomObject>