force-app/main/default/objects/Product_Registry__mdt/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Defines the specific Action or Category this registry refers to.</description>
    <label>Action</label>
    <length>60</length>
    <type>Text</type>
</CustomField>