force-app/main/default/objects/Product_Registry__mdt/fields/Api_Version__c.field-meta.xml
<CustomField>
    <fullName>Api_Version__c</fullName>
    <description>The API version to use while calling the product method</description>
    <label>Api Version</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>