force-app/main/default/objects/Product_Registry__mdt/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <description>The class name to call for this specific product</description>
    <label>Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>