force-app/main/default/objects/Product_Registry__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines if the custom metadata record is enabled</description>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>