force-app/main/default/objects/Product_Registry__mdt/fields/Namespace__c.field-meta.xml
<CustomField>
    <fullName>Namespace__c</fullName>
    <description>Defines the product namespace for this registry. For example: hed,sfal,etc.</description>
    <label>Namespace</label>
    <length>15</length>
    <type>Text</type>
</CustomField>